tests: add unit tests