@@ -9,21 +9,17 @@ import org.mockito.Captor;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.mongodb.core.MongoTemplate;
 import org.springframework.data.mongodb.core.aggregation.Aggregation;
 import org.springframework.data.mongodb.core.aggregation.AggregationResults;
 import org.springframework.data.mongodb.core.query.Criteria;
 import tech.buildrun.btgpactual.orderms.entity.OrderEntity;
+import tech.buildrun.btgpactual.orderms.factory.OrderCreatedEventFactory;
 import tech.buildrun.btgpactual.orderms.factory.OrderEntityFactory;
-import tech.buildrun.btgpactual.orderms.listener.dto.OrderCreatedEvent;
-import tech.buildrun.btgpactual.orderms.listener.dto.OrderItemEvent;
 import tech.buildrun.btgpactual.orderms.repository.OrderRepository;
 
 import java.math.BigDecimal;
-import java.util.ArrayList;
-import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
@@ -44,7 +40,7 @@ class OrderServiceTest {
     OrderService orderService;
 
     @Captor
-    ArgumentCaptor<OrderEntity> orderCaptor;
+    ArgumentCaptor<OrderEntity> orderEntityCaptor;
 
     @Captor
     ArgumentCaptor<Aggregation> aggregationCaptor;
@@ -54,10 +50,8 @@ class OrderServiceTest {
 
         @Test
         void shouldCallRepositorySave() {
-
             // ARRANGE
-            var itens = new OrderItemEvent("notebook", 1, BigDecimal.valueOf(20.50));
-            var event = new OrderCreatedEvent(1L, 2L, List.of(itens));
+            var event = OrderCreatedEventFactory.buildWithOneItem();
 
             // ACT
             orderService.save(event);
@@ -67,136 +61,139 @@ class OrderServiceTest {
         }
 
         @Test
-        void shouldMapEventToEntityCorrectly() {
-
+        void shouldMapEventToEntityWithSuccess() {
             // ARRANGE
-            var itens = new OrderItemEvent("notebook", 1, BigDecimal.valueOf(20.50));
-            var event = new OrderCreatedEvent(1L, 2L, List.of(itens));
+            var event = OrderCreatedEventFactory.buildWithOneItem();
 
             // ACT
             orderService.save(event);
 
             // ASSERT
-            verify(orderRepository).save(orderCaptor.capture());
-            assertEquals(event.codigoPedido(), orderCaptor.getValue().getOrderId());
-            assertEquals(event.codigoCliente(), orderCaptor.getValue().getCustomerId());
-            assertNotNull(orderCaptor.getValue().getTotal());
-            assertEquals(1, orderCaptor.getValue().getItems().size());
-            assertEquals(itens.produto(), orderCaptor.getValue().getItems().get(0).getProduct());
-            assertEquals(itens.quantidade(), orderCaptor.getValue().getItems().get(0).getQuantity());
-            assertEquals(itens.preco(), orderCaptor.getValue().getItems().get(0).getPrice());
+            verify(orderRepository, times(1)).save(orderEntityCaptor.capture());
+
+            var entity = orderEntityCaptor.getValue();
+
+            assertEquals(event.codigoPedido(), entity.getOrderId());
+            assertEquals(event.codigoCliente(), entity.getCustomerId());
+            assertNotNull(entity.getTotal());
+            assertEquals(event.itens().getFirst().produto(), entity.getItems().getFirst().getProduct());
+            assertEquals(event.itens().getFirst().quantidade(), entity.getItems().getFirst().getQuantity());
+            assertEquals(event.itens().getFirst().preco(), entity.getItems().getFirst().getPrice());
         }
 
         @Test
-        void shouldCalculateOrderTotalCorrectly() {
-
+        void shouldCalculateOrderTotalWithSuccess() {
             // ARRANGE
-            var item1 = new OrderItemEvent("notebook", 2, BigDecimal.valueOf(20.50));
-            var item2 = new OrderItemEvent("mouse", 1, BigDecimal.valueOf(35.50));
-            var event = new OrderCreatedEvent(1L, 2L, List.of(item1, item2));
-            var totalItem1 = item1.preco().multiply(BigDecimal.valueOf(item1.quantidade()));
-            var totalItem2 = item2.preco().multiply(BigDecimal.valueOf(item2.quantidade()));
+            var event = OrderCreatedEventFactory.buildWithTwoItens();
+            var totalItem1 = event.itens().getFirst().preco().multiply(BigDecimal.valueOf(event.itens().getFirst().quantidade()));
+            var totalItem2 = event.itens().getLast().preco().multiply(BigDecimal.valueOf(event.itens().getLast().quantidade()));
+            var orderTotal = totalItem1.add(totalItem2);
 
             // ACT
             orderService.save(event);
 
             // ASSERT
-            verify(orderRepository).save(orderCaptor.capture());
-            assertNotNull(orderCaptor.getValue().getTotal());
-            assertEquals(totalItem1.add(totalItem2), orderCaptor.getValue().getTotal());
+            verify(orderRepository, times(1)).save(orderEntityCaptor.capture());
+
+            var entity = orderEntityCaptor.getValue();
+
+            assertNotNull(entity.getTotal());
+            assertEquals(orderTotal, entity.getTotal());
         }
     }
 
     @Nested
-    class FindAllByCustomerId {
-
+    class findAllByCustomerId {
 
         @Test
-        void shouldCallRepositoryCorrectly() {
-
+        void shouldCallRepository() {
             // ARRANGE
             var customerId = 1L;
             var pageRequest = PageRequest.of(0, 10);
-            var page = new PageImpl<>(new ArrayList<>());
-            doReturn(page).when(orderRepository).findAllByCustomerId(anyLong(), any(PageRequest.class));
+            doReturn(OrderEntityFactory.buildWithPage())
+                    .when(orderRepository).findAllByCustomerId(eq(customerId), eq(pageRequest));
 
             // ACT
-            orderService.findAllByCustomerId(customerId, pageRequest);
+            var response = orderService.findAllByCustomerId(customerId, pageRequest);
 
             // ASSERT
             verify(orderRepository, times(1)).findAllByCustomerId(eq(customerId), eq(pageRequest));
         }
 
         @Test
-        void shouldMapToResponseCorrectly() {
-
+        void shouldMapResponse() {
             // ARRANGE
             var customerId = 1L;
             var pageRequest = PageRequest.of(0, 10);
-            var entity = OrderEntityFactory.buildWithOneItem();
-            var page = new PageImpl<>(List.of(entity));
-            doReturn(page).when(orderRepository).findAllByCustomerId(anyLong(), any(PageRequest.class));
+            var page = OrderEntityFactory.buildWithPage();
+            doReturn(page).when(orderRepository).findAllByCustomerId(anyLong(), any());
 
             // ACT
-            var orders = orderService.findAllByCustomerId(customerId, pageRequest);
+            var response = orderService.findAllByCustomerId(customerId, pageRequest);
 
             // ASSERT
-            assertEquals(page.getContent().size(), orders.getContent().size());
-            assertEquals(page.getTotalPages(), orders.getTotalPages());
-            assertEquals(page.getTotalElements(), orders.getTotalElements());
-            assertEquals(entity.getCustomerId(), orders.getContent().getFirst().customerId());
-            assertEquals(entity.getOrderId(), orders.getContent().getFirst().orderId());
-            assertEquals(entity.getTotal(), orders.getContent().getFirst().total());
+            assertEquals(page.getTotalPages(), response.getTotalPages());
+            assertEquals(page.getTotalElements(), response.getTotalElements());
+            assertEquals(page.getSize(), response.getSize());
+            assertEquals(page.getNumber(), response.getNumber());
+
+            assertEquals(page.getContent().getFirst().getOrderId(), response.getContent().getFirst().orderId());
+            assertEquals(page.getContent().getFirst().getCustomerId(), response.getContent().getFirst().customerId());
+            assertEquals(page.getContent().getFirst().getTotal(), response.getContent().getFirst().total());
+
         }
     }
-
+    
     @Nested
     class FindTotalOnOrdersByCustomerId {
 
         @Test
-        void shouldCallMongoTemplateCorrectly() {
+        void shouldCallMongoTemplate() {
             // ARRANGE
             var customerId = 1L;
-            var result = mock(AggregationResults.class);
-            doReturn(new Document("total", 1)).when(result).getUniqueMappedResult();
-            doReturn(result).when(mongoTemplate).aggregate(any(Aggregation.class), anyString(), eq(Document.class));
+            var totalExpected = BigDecimal.valueOf(1);
+            var aggregationResult = mock(AggregationResults.class);
+            doReturn(new Document("total",  totalExpected)).when(aggregationResult).getUniqueMappedResult();
+            doReturn(aggregationResult).when(mongoTemplate).aggregate(any(Aggregation.class), anyString(), eq(Document.class));
 
             // ACT
-            orderService.findTotalOnOrdersByCustomerId(customerId);
+            var total = orderService.findTotalOnOrdersByCustomerId(customerId);
 
             // ASSERT
             verify(mongoTemplate, times(1)).aggregate(any(Aggregation.class), anyString(), eq(Document.class));
+            assertEquals(totalExpected, total);
         }
 
         @Test
         void shouldUseCorrectAggregation() {
             // ARRANGE
             var customerId = 1L;
-            var result = mock(AggregationResults.class);
-            doReturn(new Document("total", 1)).when(result).getUniqueMappedResult();
-            doReturn(result).when(mongoTemplate).aggregate(aggregationCaptor.capture(), anyString(), eq(Document.class));
+            var totalExpected = BigDecimal.valueOf(1);
+            var aggregationResult = mock(AggregationResults.class);
+            doReturn(new Document("total",  totalExpected)).when(aggregationResult).getUniqueMappedResult();
+            doReturn(aggregationResult).when(mongoTemplate).aggregate(aggregationCaptor.capture(), anyString(), eq(Document.class));
 
             // ACT
             orderService.findTotalOnOrdersByCustomerId(customerId);
 
             // ASSERT
-            var aggr = aggregationCaptor.getValue();
-            var expected = newAggregation(
+            var aggregation = aggregationCaptor.getValue();
+            var aggregationExpected = newAggregation(
                     match(Criteria.where("customerId").is(customerId)),
                     group().sum("total").as("total")
             );
 
-            assertNotNull(aggr);
-            assertEquals(expected.toString(), aggr.toString());
+            assertEquals(aggregationExpected.toString(), aggregation.toString());
         }
 
         @Test
-        void shouldUseCorrectTableName() {
+        void shouldQueryCorrectTable() {
             // ARRANGE
             var customerId = 1L;
-            var result = mock(AggregationResults.class);
-            doReturn(new Document("total", 1)).when(result).getUniqueMappedResult();
-            doReturn(result).when(mongoTemplate).aggregate(any(Aggregation.class), anyString(), eq(Document.class));
+            var totalExpected = BigDecimal.valueOf(1);
+            var aggregationResult = mock(AggregationResults.class);
+            doReturn(new Document("total",  totalExpected)).when(aggregationResult).getUniqueMappedResult();
+            doReturn(aggregationResult).when(mongoTemplate).aggregate(any(Aggregation.class), eq("tb_orders"), eq(Document.class));
 
             // ACT
             orderService.findTotalOnOrdersByCustomerId(customerId);
@@ -205,4 +202,5 @@ class OrderServiceTest {
             verify(mongoTemplate, times(1)).aggregate(any(Aggregation.class), eq("tb_orders"), eq(Document.class));
         }
     }
+
 }
